--- a/src/components/action-bar.css
+++ b/src/components/action-bar.css
@@ -2,10 +2,14 @@
   position: absolute;
   top: 0;
   right: 0;
-  opacity: 0.25;
-  transition: opacity .3s;
+  opacity: 1;
+  
 }
 
-.action-bar:hover {
-  opacity:1;
+
+.button {
+  background-color: #A1E5AB !important;
 }
+
+
+
