--- a/src/components/cell-list-item.css
+++ b/src/components/cell-list-item.css
@@ -2,10 +2,17 @@
   position: relative;
 }
 
-.action-bar-wrapper {
-  height: 30px;
-  width: 100%;
-  top: 0;
-  right: 0;
-  background-color: #202124;
+.cell-list-item:hover {
+  position: relative;
+  border: 1px solid #FAF9F6 !important;
 }
+
+.cell-list-item:focus {
+  position: relative;
+  border: 1px solid #FAF9F6 !important;
+}
+
+
+
+
+
